--- a/transformer/templates/transformer/log_view.html
+++ b/transformer/templates/transformer/log_view.html
@@ -34,9 +34,9 @@
 
 {% csrf_token %}
 <br/>
-<select name="web_hook" id="web_hook">
-    {% for web_hook_url in web_hook_url_list %}
-        <option value="{{ web_hook_url.id }}">{{web_hook_url.web_hook_url}}</option>
+<select name="access_url" id="access_url">
+    {% for access_url_row in access_url_list %}
+        <option value="{{ access_url_row.access_url }}">{{access_url_row.access_url}}</option>
     {% endfor %}
 </select>
 <br/><br/>
@@ -47,18 +47,22 @@
         let html_to_render = `
             <table class="nice_table_bro">
                 <tr>
+                    <th>Web hook URL</th>
                     <th>Input Data</th>
                     <th>Output Data</th>
                     <th>Response Data</th>
                     <th>Request At</th>
+                    <th>Access Method</th>
                 </tr>`;
         log_data.forEach((log_row) => {
             html_to_render=`${html_to_render}
                 <tr>
+                    <td>${log_row.web_hook_url}</td>
                     <td>${log_row.input_data}</td>
                     <td>${log_row.output_data}</td>
                     <td>${log_row.response_data}</td>
                     <td>${log_row.created_at}</td>
+                    <td>${log_row.access_type}</td>
                 </tr>`;
         });
         $('#tableRender').html(`${html_to_render}</table>`);
@@ -66,13 +70,13 @@
     // Stuff to make button work
     $(document).ready(function() {
         $('#get_log').click((e)=>{
-            let s = $('#web_hook').val();
+            let s = $('#access_url').val();
             $.ajax({
                 url: '{% url 'transformer:get_logs' %}',
                 type: 'POST',
                 data: {
                     csrfmiddlewaretoken: document.getElementsByName('csrfmiddlewaretoken')[0].value,
-                    web_hook_id: s
+                    access_url: s
                 },
                 dataType: 'json',
                 success: (data) => {
