Added columns for headers

--- a/transformer/templates/transformer/log_view.html
+++ b/transformer/templates/transformer/log_view.html
@@ -47,6 +47,8 @@
                         <th>Web hook URL</th>
                         <th>Input Data</th>
                         <th>Output Data</th>
+                        <th>Old Headers</th>
+                        <th>New Headers</th>
                         <th>Response Data</th>
                         <th>Request At</th>
                         <th>Access Method</th>
@@ -57,6 +59,8 @@
                         <td>${log_row.web_hook_url}</td>
                         <td>${log_row.input_data}</td>
                         <td>${log_row.output_data}</td>
+                        <td>${log_row.old_headers}</td>
+                        <td>${log_row.new_headers}</td>
                         <td>${log_row.response_data}</td>
                         <td>${log_row.created_at}</td>
                         <td>${log_row.access_type}</td>
